--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "author": "virtusa hack",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "geocoder": "^0.2.3",
-    "mongoose": "^5.9.2",
+    "mongoose": "^5.12.5",
     "node-geocoder": "^3.25.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
